--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 
     <link rel="shortcut icon" type="image/ico" href="img/favicon.ico"/>
 
+    <link rel="manifest" href="manifest.json">
+
+    <meta name="theme-color" content="#3498db">
+
 </head>
 <body>
         <!-- Titulo -->
